tests/fail/fail3.sps
(import (yuni scheme))

(car #f)
